chats: added core chats functionality
