# cmd/app/app/handler.go
@@ -2,6 +2,7 @@ package app
 
 import (
 	authdelivery "github.com/example/ai-restaurant-assistant-backend/internal/auth/delivery/v1/http"
+	chatdelivery "github.com/example/ai-restaurant-assistant-backend/internal/chat/delivery/v1/http"
 	menudelivery "github.com/example/ai-restaurant-assistant-backend/internal/menu/delivery/v1/http"
 	userdelivery "github.com/example/ai-restaurant-assistant-backend/internal/user/delivery/v1/http"
 )
@@ -11,5 +12,6 @@ type Handler struct {
 	authdelivery.AuthHandler
 	userdelivery.UserHandler
 	menudelivery.MenuHandler
+	chatdelivery.ChatHandler
 	Unimplemented
 }
